# Jellyfish-Idle

./: .clang-tidy  .gitignore  .sonarcloud.properties  CMakeLists.txt  Ideas.md  LICENSE  LICENSE.md  README.md  build.sh  clean.sh  imgui.ini  makefile
.github/workflows/: cmake-single-platform.yml
assets/jsons/: abilities.json  achievements.json  buildings.json  cultures.json  jobs.json  multipliers.json  quests.json  recipes.json  ressources.json  upgrades.json
imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
imgui/backends/: imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_impl_sdlrenderer2.cpp  imgui_impl_sdlrenderer2.h
src/: Game.cpp  Game.hpp  Main.cpp
src/Abilities/: AbilityDataView.cpp  AbilityDataView.hpp  AbilityManager.cpp  AbilityManager.hpp  CallThunder.cpp  CallThunder.hpp  InsightAbility.cpp  InsightAbility.hpp
src/Achievements/: Achievement.cpp  Achievement.hpp  AchievementDataView.cpp  AchievementDataView.hpp  AchievementIDs.hpp  AchievementLambdas.cpp  AchievementSystem.cpp  AchievementSystem.hpp  Notification.cpp  Notification.hpp
src/BackendRenderer/: RendererWrapper.cpp  RendererWrapper.hpp  TextureAtlas.cpp  TextureAtlas.hpp
src/Buildings/: Building.cpp  Building.hpp  BuildingDataView.cpp  BuildingDataView.hpp  BuildingManager.cpp  BuildingManager.hpp  GlassTower.cpp  GlassTower.hpp  Mine.cpp  Mine.hpp  PlanktonField.cpp  PlanktonField.hpp  SandNest.cpp  SandNest.hpp
src/Crafting/: CraftingDataView.cpp  CraftingDataView.hpp  CraftingManager.cpp  CraftingManager.hpp  CraftingRecipe.cpp  CraftingRecipe.hpp  RecipeID.hpp
src/Depth/: DepthDataView.cpp  DepthDataView.hpp  DepthSystem.cpp  DepthSystem.hpp
src/GameData/: Achievement.cpp  Achievement.hpp  AchievementDataView.cpp  AchievementDataView.hpp  AchievementSystem.cpp  AchievementSystem.hpp  DepthDataView.cpp  DepthDataView.hpp  DepthSystem.cpp  DepthSystem.hpp  FilePaths.hpp  GameDataAccess.cpp  GameDataAccess.hpp  GameDataSynchronizer.cpp  GameDataSynchronizer.hpp  GameDataView.cpp  GameDataView.hpp  GameIDsTypes.hpp  GameSynchronizer.cpp  GameSynchronizer.hpp  GameSystems.cpp  GameSystems.hpp  InputHandler.cpp  InputHandler.hpp  MultiplierDataView.cpp  MultiplierDataView.hpp  MultipliersConstants.hpp  MultipliersIDs.hpp  MultipliersRegister.cpp  MultipliersRegister.hpp  SaveAndLoadable.hpp  SaveSystem.cpp  SaveSystem.hpp
src/Garden/: AquaCulture.cpp  AquaCulture.hpp  AquaCultureID.hpp  GardenDataView.cpp  GardenDataView.hpp  GardenManager.cpp  GardenManager.hpp
src/Jellyfishs/: Jellyfish.cpp  Jellyfish.hpp  JellyfishDataView.cpp  JellyfishDataView.hpp  JellyfishManager.cpp  JellyfishManager.hpp
src/Multipliers/: Multiplier.cpp  Multiplier.hpp  MultiplierDataView.cpp  MultiplierDataView.hpp  MultipliersConstants.hpp  MultipliersIDs.hpp  MultipliersRegister.cpp  MultipliersRegister.hpp
src/Quests/: Quest.cpp  Quest.hpp  QuestDataView.cpp  QuestDataView.hpp  QuestManager.cpp  QuestManager.hpp  Questline.cpp  Questline.hpp
src/Ressources/: Depth.cpp  Depth.hpp  Ressource.cpp  Ressource.hpp  RessourceDataView.cpp  RessourceDataView.hpp  RessourceManager.cpp  RessourceManager.hpp  RessourceType.hpp
src/UI/: UIAbilitiesPanel.cpp  UIAbilitiesPanel.hpp  UIBuildingsPanel.cpp  UIBuildingsPanel.hpp  UIColors.hpp  UIDepthPanel.cpp  UIDepthPanel.hpp  UIElement.hpp  UIGardenPanel.cpp  UIGardenPanel.hpp  UIJobsPanel.cpp  UIJobsPanel.hpp  UIManager.cpp  UIManager.hpp  UINotification.cpp  UINotification.hpp  UIOctopusPanel.cpp  UIOctopusPanel.hpp  UIResearchPanel.cpp  UIResearchPanel.hpp  UIRessourcesPanel.cpp  UIRessourcesPanel.hpp  UIUtils.cpp  UIUtils.hpp
src/Upgrades/: Upgrade.cpp  Upgrade.hpp  UpgradeDataView.cpp  UpgradeDataView.hpp  UpgradeFactory.cpp  UpgradeFactory.hpp  UpgradeId.hpp  UpgradeManager.cpp  UpgradeManager.hpp
tests/: TestsAchievements.cpp  TestsBuildings.cpp  TestsCrafts.cpp  TestsCultures.cpp  TestsJellies.cpp  TestsMain.cpp  TestsRessources.cpp
tests/jsonTests/: TestsAbilitiesJson.cpp  TestsAchievementsJson.cpp  TestsBuildingsJson.cpp  TestsCulturesJson.cpp  TestsJobsJson.cpp  TestsMultipliersJson.cpp  TestsRecipesJson.cpp  (+2 more)
(+10 files in other folders)
